A few more dark mode fixes (#1700)

--- a/src/components/bottom_bar/_bottom_bar.scss
+++ b/src/components/bottom_bar/_bottom_bar.scss
@@ -1,5 +1,6 @@
 .euiBottomBar {
-  background: tintOrShade($euiColorFullShade, 25%, 90%);
+  @include euiBottomShadowFlat($euiShadowColorLarge);
+  background: tintOrShade($euiColorFullShade, 25%, 100%);
   color: $euiColorEmptyShade;
   position: fixed;
   bottom: 0;
